Installing eslint & babel dev dependencies & fixing lint issues
Adding PropTypes

Adding babelrc & eslintrc to allow overriding razzle defaults

Using razzle.config.js for overriding standard razzle webpack config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,13 @@
 {
   "parser": "babel-eslint",
+  "plugins": ["react", "jsx-a11y"],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {}
 }
