--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@jaredpalmer/after": "^1.3.1",
     "express": "^4.16.3",
+    "prop-types": "^15.6.1",
     "razzle": "^2.0.0-alpha.12",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -33,6 +34,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4"
+    "babel-loader": "^7.1.4",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3"
   }
 }
