Updating to address eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,12 @@
   "parser": "babel-eslint",
   "plugins": ["react", "jsx-a11y"],
   "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "env": {
+    "es6": true,
+    "browser": true,
+    "jest": true,
+    "node": true
+  },
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module",
@@ -9,5 +15,7 @@
       "jsx": true
     }
   },
-  "rules": {}
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+  }
 }
