--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,19 @@
 {
-  "extends": "airbnb"
+  "extends": "airbnb",
+  "env": {
+    "es6": true,
+    "browser": true,
+    "jest": true,
+    "node": true
+  },
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "plugins": ["react", "jsx-a11y"],
+  "rules": {}
 }
