--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "articles-renderer",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "Article renderer",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "BBC",
     "Article"
   ],
-  "author": "",
+  "author": "BBC",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/bbc/articles-renderer/issues"
@@ -27,7 +27,6 @@
     "@jaredpalmer/after": "^1.3.1",
     "express": "^4.16.3",
     "prop-types": "^15.6.1",
-    "razzle": "^2.0.0-alpha.12",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
@@ -36,10 +35,15 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.4",
+    "chai": "^4.1.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint-config-airbnb": "15.1.0",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1"
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "razzle": "^2.0.0-alpha.12"
+  },
+  "jest": {
+    "setupFiles": ["./src/__test__/enzyme-setup.js"]
   }
 }
