--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "homepage": "https://github.com/bbc/articles-renderer#readme",
   "dependencies": {
     "@jaredpalmer/after": "^1.3.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.3",
+    "prettier": "^1.12.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
