--- a/package.json
+++ b/package.json
@@ -35,14 +35,12 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.4",
-    "chai": "^4.1.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint-config-airbnb": "15.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "razzle": "^2.0.0-alpha.12",
-    "supertest": "^3.1.0"
+    "razzle": "^2.0.0-alpha.12"
   },
   "jest": {
     "collectCoverageFrom": [
