--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/bbc/articles-renderer#readme",
   "dependencies": {
     "@jaredpalmer/after": "^1.3.1",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.3",
     "prettier": "^1.12.1",
