--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "homepage": "https://github.com/bbc/articles-renderer#readme",
   "dependencies": {
     "@jaredpalmer/after": "^1.3.1",
+    "express": "^4.16.3",
+    "prop-types": "^15.6.1",
+    "prettier": "^1.12.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
-    "express": "^4.16.3",
-    "prettier": "^1.12.1",
-    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
@@ -44,6 +44,7 @@
     "eslint-config-airbnb": "15.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
+    "prettier-eslint": "^8.8.1",
     "razzle": "^2.0.0-alpha.12",
     "supertest": "^3.1.0"
   },
