--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   "dependencies": {
     "@jaredpalmer/after": "^1.3.1",
     "express": "^4.16.3",
+    "eslint-config-airbnb": "15.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "prop-types": "^15.6.1",
+    "razzle": "^2.0.0-alpha.12",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
@@ -36,11 +40,7 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.4",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint-config-airbnb": "15.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "razzle": "^2.0.0-alpha.12"
+    "enzyme-adapter-react-16": "^1.1.1"
   },
   "jest": {
     "collectCoverageFrom": [
