--- a/.eslintrc
+++ b/.eslintrc
@@ -15,5 +15,7 @@
     }
   },
   "plugins": ["react", "jsx-a11y"],
-  "rules": {}
+  "rules": {
+    "prettier/prettier": ["error", {singleQuote: true, trailingComma: "all"}]
+    }
 }
