--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "start": "NODE_ENV=production node build/server.js"
+    "start": "NODE_ENV=production node build/server.js",
+    "speculate": "speculate"
   },
   "repository": {
     "type": "git",
