--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "articles-renderer",
+  "name": "simorgh",
   "version": "0.0.1",
   "description": "Article renderer",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bbc/articles-renderer.git"
+    "url": "git+https://github.com/bbc/simorgh.git"
   },
   "keywords": [
     "BBC",
@@ -20,9 +20,9 @@
   "author": "BBC",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/bbc/articles-renderer/issues"
+    "url": "https://github.com/bbc/simorgh/issues"
   },
-  "homepage": "https://github.com/bbc/articles-renderer#readme",
+  "homepage": "https://github.com/bbc/simorgh#readme",
   "dependencies": {
     "@jaredpalmer/after": "^1.3.1",
     "express": "^4.16.3",
