--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.4",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint-plugin-react": "^7.8.2"
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-jsx-a11y": "^5.1.1"
   },
   "jest": {
     "collectCoverageFrom": [
