--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.4",
-    "eslint-plugin-react": "^7.8.2"
+    "babel-loader": "^7.1.4"
   },
   "jest": {
     "collectCoverageFrom": [
