--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:lint": "eslint --ext .js,jsx ./src",
     "test:unit": "razzle test --env=jsdom",
     "start": "NODE_ENV=production node build/server.js",
-    "speculate": "speculate"
+    "speculate": "speculate",
+    "cypress": "cypress open"
   },
   "repository": {
     "type": "git",
