--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "razzle start",
     "build": "razzle build",
     "lint": "eslint --ext .js,jsx ./src",
-    "test": "razzle test --env=jsdom",
+    "test": "npm run lint & npm run test:unit",
+    "test:unit": "razzle test --env=jsdom",
     "start": "NODE_ENV=production node build/server.js",
     "speculate": "speculate"
   },
