--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test:unit": "razzle test --env=jsdom",
     "start": "NODE_ENV=production node build/server.js",
     "speculate": "speculate",
-    "test:e2e": "cypress run",
-    "test:debug": "cypress open"
+    "test:e2e": "npx cypress run",
+    "test:debug": "npx cypress open"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,6 @@
   "homepage": "https://github.com/bbc/simorgh#readme",
   "dependencies": {
     "@jaredpalmer/after": "^1.3.1",
-    "cypress": "^3.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
