--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "NODE_ENV=production node build/server.js",
     "speculate": "speculate",
     "test:e2e": "npx cypress run",
-    "test:e2e:debug": "npx cypress open"
+    "test:e2e:interactive": "npx cypress open"
   },
   "repository": {
     "type": "git",
