--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "razzle start",
     "build": "razzle build",
-    "test": "npm run test:lint & npm run test:unit",
+    "test": "npm run test:lint && npm run test:unit",
     "test:lint": "eslint --ext .js,jsx ./src",
     "test:unit": "razzle test --env=jsdom",
     "start": "NODE_ENV=production node build/server.js",
