--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "15.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.3",
     "prop-types": "^15.6.1",
     "razzle": "^2.0.0-alpha.12",
