--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:unit": "razzle test --env=jsdom",
     "start": "NODE_ENV=production node build/server.js",
     "speculate": "speculate",
+    "storybook": "start-storybook -p 9001 -c .storybook",
     "test:e2e": "npx cypress run",
     "test:e2e:interactive": "npx cypress open"
   },
@@ -50,6 +51,8 @@
     "speculate": "^1.7.4"
   },
   "devDependencies": {
+    "@storybook/react": "^4.0.0-alpha.8",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4"
   },
   "jest": {
