--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
-    "speculate": "^1.7.4"
+    "speculate": "^1.7.4",
+    "styled-components": "^3.3.2"
   },
   "devDependencies": {
     "@storybook/react": "^4.0.0-alpha.8",
