--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "express": "^4.16.3",
     "prop-types": "^15.6.1",
     "prettier": "1.13.4",
-    "razzle": "^2.0.0-alpha.12",
+    "razzle": "^2.0.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
