--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "NODE_ENV=production node build/server.js",
     "speculate": "speculate",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "test:e2e": "npx cypress run",
+    "test:e2e": "npm run dev & npx cypress run && pkill -f node",
     "test:e2e:interactive": "npx cypress open"
   },
   "repository": {
