Setup coverage reporting from travis
Docs:
https://docs.codeclimate.com/docs/configuring-test-coverage
https://docs.codeclimate.com/docs/travis-ci-test-coverage
https://github.com/codeclimate/test-reporter/blob/master/examples/javascript_examples.md

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=3c35cf067b51b620c21748c55440f5f356a45f9caa6cbfabc724ffc72008889b
 language: node_js
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
