--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,8 @@ notifications:
     on_start: change   # default: never
     on_cancel: always # default: always
     on_error: always # default: always
+before_script:
+  - npm run build
+  - npm run start
+after_script:
+  - pkill -f razzle
