--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start": "NODE_ENV=production node build/server.js",
     "speculate": "speculate",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "test:e2e": "npm run build && npm run start & npx cypress run",
-    "test:e2e:interactive": "npm run build && npm run start & npx cypress open"
+    "test:e2e": "npx cypress run",
+    "test:e2e:interactive": "npx cypress open"
   },
   "repository": {
     "type": "git",
