Use npm install instead of npm ci due to version of npm we have available

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache:
     - ~/.npm
     - ~/.cache
 install:
-  - npm ci
+  - npm install
 script:
   - $(npm bin)/cypress run --record
 notifications:
