Install Cypress as a dev dependency, use Node version 10.4, to be able to use npm ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: node_js
+node_js:
+  - 10.4
 cache:
   directories:
     - ~/.npm
     - ~/.cache
 install:
-  - npm install
+  - npm ci
 script:
   - $(npm bin)/cypress run --record
 notifications:
