--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@storybook/react": "^4.0.0-alpha.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "cypress": "^3.0.1",
     "jest-fetch-mock": "^1.6.2"
   },
   "jest": {
