--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
   "jest": {
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
-      "!./build/**",
-      "!./node_modules/**"
+      "!**/*.stories.jsx",
+      "!**/build/**",
+      "!**/cypress/support/**"
     ],
     "setupFiles": [
       "./src/__test__/jest-setup.js"
