rmv inception coverage reporting

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
       "**/*.{js,jsx}",
       "!**/*.stories.jsx",
       "!**/build/**",
+      "!**/coverage/**",
       "!**/cypress/support/**"
     ],
     "setupFiles": [
