--- a/package.json
+++ b/package.json
@@ -34,28 +34,31 @@
   "dependencies": {
     "@jaredpalmer/after": "^1.3.1",
     "babel-eslint": "^8.2.3",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "es6-promise": "^4.2.4",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.3",
-    "prop-types": "^15.6.1",
+    "isomorphic-fetch": "^2.2.1",
     "prettier": "1.13.4",
-    "razzle": "^2.0.0-alpha.12",
+    "prop-types": "^15.6.1",
+    "razzle": "^2.0.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
-    "speculate": "^1.7.4"
+    "react-test-renderer": "^16.4.0",
+    "speculate": "^1.7.4",
+    "styled-components": "^3.3.2"
   },
   "devDependencies": {
     "@storybook/react": "^4.0.0-alpha.8",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4"
+    "babel-loader": "^7.1.4",
+    "jest-fetch-mock": "^1.6.2"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -64,7 +67,7 @@
       "!**/*.stories.jsx"
     ],
     "setupFiles": [
-      "./src/__test__/enzyme-setup.js"
+      "./src/__test__/jest-setup.js"
     ]
   }
 }
