--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "speculate": "speculate",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test:e2e": "npx cypress run",
-    "test:e2e:interactive": "npx cypress open"
+    "test:e2e:interactive": "npx cypress open",
+    "lighthouse":"lighthouse --config-path=custom-config.js http://localhost:7080/"
   },
   "repository": {
     "type": "git",
@@ -56,7 +57,8 @@
     "@storybook/react": "^4.0.0-alpha.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
-    "jest-fetch-mock": "^1.6.2"
+    "jest-fetch-mock": "^1.6.2",
+    "lighthouse": "^2.9.4"
   },
   "jest": {
     "collectCoverageFrom": [
