--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,7 @@ cache:
 before_install: npm install -g npm@6.1.0
 install:
   - npm ci
-before_script:
-  - npm run build
-  - npm run start
-script:
-  - $(npm bin)/cypress run
+before_script: scripts/travis-before-install.sh
 notifications:
   email: false
   slack:
