--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache:
   directories:
     - ~/.npm
     - ~/.cache
-before_install: npm install -g npm@6.1.0
+before_install: npm install -g npm@latest
 install:
   - npm ci
 before_script: ./scripts/travis-before-install.sh
