--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
+    "lighthouse": "^2.9.4",
     "prettier": "1.13.5",
     "prop-types": "^15.6.1",
     "razzle": "^2.0.3",
@@ -57,8 +58,7 @@
     "@storybook/react": "^4.0.0-alpha.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
-    "jest-fetch-mock": "^1.6.2",
-    "lighthouse": "^2.9.4"
+    "jest-fetch-mock": "^1.6.2"
   },
   "jest": {
     "collectCoverageFrom": [
