--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "razzle start",
     "build": "razzle build",
     "test": "npm run test:lint && npm run test:unit",
-    "test:lint": "eslint --ext .js,jsx ./src",
+    "test:lint": "eslint --ext .js,jsx ./src && eslint --ext .json ./data",
     "test:unit": "razzle test --env=jsdom --coverage",
     "start": "NODE_ENV=production node build/server.js",
     "speculate": "speculate",
@@ -57,6 +57,7 @@
     "@storybook/react": "^4.0.0-alpha.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "eslint-plugin-json": "^1.2.0",
     "jest-fetch-mock": "^1.6.2"
   },
   "jest": {
