output lighthouse audits to reports folder

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test:e2e": "npx cypress run",
     "test:e2e:interactive": "npx cypress open",
-    "lighthouse": "lighthouse --config-path=custom-config.js http://localhost:7080/ --view"
+    "lighthouse": "lighthouse http://localhost:7080/ --config-path=custom-config.js --output-path=./reports/report.html --view"
   },
   "repository": {
     "type": "git",
