--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "start": "NODE_ENV=production node build/server.js",
     "speculate": "speculate",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "test:e2e": "npx cypress run",
-    "test:e2e:interactive": "npx cypress open",
-    "test:storybook": "CYPRESS_baseUrl=http://localhost:9001 npm run test:e2e -- --spec cypress/integration/storybook_spec.js"
+    "test:e2e": "npx cypress run --project ./src/",
+    "test:e2e:interactive": "npx cypress open --project ./src/",
+    "test:storybook": "npx cypress run --project ./.storybook/"
   },
   "repository": {
     "type": "git",
