--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test:e2e": "npx cypress run",
     "test:e2e:interactive": "npx cypress open",
+    "test:e2e:ci": "npm run build && run-p --race start test:e2e",
     "test:storybook": "npx cypress run --project ./.storybook/"
   },
   "repository": {
@@ -59,6 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "jest-fetch-mock": "^1.6.2",
+    "npm-run-all": "^4.1.3",
     "prettier": "1.13.5"
   },
   "jest": {
