--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "start": "NODE_ENV=production node build/server.js",
     "speculate": "speculate",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "test:e2e": "npx cypress run",
-    "test:e2e:interactive": "npx cypress open",
+    "cypress": "npx cypress run",
+    "cypress:interactive": "npx cypress open",
+    "test:e2e": "run-p --race dev cypress",
+    "test:e2e:interactive": "run-p --race dev cypress:interactive",
     "test:storybook": "npx cypress run --project ./.storybook/",
     "lighthouse": "lighthouse http://localhost:7080/ --output-path=./reports/report.html --view"
   },
@@ -60,6 +62,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "jest-fetch-mock": "^1.6.2",
     "lighthouse": "^2.9.4",
+    "npm-run-all": "^4.1.3",
     "prettier": "1.13.5",
     "supertest": "^3.1.0"
   },
