--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "cypress": "npx cypress run",
     "cypress:interactive": "npx cypress open",
-    "test:e2e": "npm run build && run-p --race start cypress",
-    "test:e2e:dev": "run-p --race dev cypress",
-    "test:e2e:interactive": "run-p --race dev cypress:interactive",
+    "test:e2e": "kill $(lsof -t -i:7080) && npm run build && run-p --race start cypress",
+    "test:e2e:dev": "kill $(lsof -t -i:7080) && run-p --race dev cypress",
+    "test:e2e:dev:interactive": "kill $(lsof -t -i:7080) && run-p --race dev cypress:interactive",
     "test:storybook": "npx cypress run --project ./.storybook/",
     "lighthouse": "lighthouse http://localhost:7080/ --output-path=./reports/report.html --view"
   },
