--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ before_script:
   - ./cc-test-reporter before-build
 script:
   - npm test
+  - npm run test:e2e:ci
 after_script:
   - ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
