--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:e2e": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start cypress",
     "test:e2e:ci": "npm run build && run-p --race start cypress",
     "test:e2e:interactive": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start cypress:interactive",
-    "test:storybook": "npx cypress run --project ./.storybook/",
+    "test:storybook": "(lsof -t -i:9001 | xargs kill) && npx cypress run --project ./.storybook/",
     "lighthouse": "lighthouse http://localhost:7080/ --output-path=./reports/report.html --view"
   },
   "repository": {
