--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:e2e:ci": "npm run build && run-p --race start cypress",
     "test:e2e:interactive": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start cypress:interactive",
     "test:storybook": "(lsof -t -i:9001 | xargs kill) && run-p --race storybook cypress:storybook",
-    "lighthouse": "lighthouse http://localhost:7080/ --output-path=./reports/report.html --view"
+    "lighthouse": "lighthouse http://localhost:7080/ --output-path=./reports/report.html --view",
+    "test:lighthouse": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start lighthouse"
   },
   "repository": {
     "type": "git",
