--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "cypress:interactive": "npx cypress open",
     "cypress:storybook": "npx cypress run --project ./.storybook/.",
     "dev": "razzle start",
-    "lighthouse": "lighthouse http://localhost:7080/ --output-path=./reports/report.html --view",    
+    "lighthouse": "lighthouse http://localhost:7080/ --output-path=./reports/report.html --view",
     "speculate": "speculate",
     "start": "NODE_ENV=production node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
@@ -20,6 +20,7 @@
     "test:lighthouse": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook",
     "test:storybook": "(lsof -t -i:9001 | xargs kill) && run-p --race storybook cypress:storybook",
+    "test:storybook:ci": "run-p --race storybook cypress:storybook",
     "test:unit": "razzle test --env=jsdom --coverage"
   },
   "repository": {
