--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cypress:storybook": "cypress run --project ./.storybook/.",
     "dev": "razzle start",
     "lighthouse": "lighthouse http://localhost:7080/ --output-path=./reports/report.html --view",
+    "precommit": "npm run test:lint",
+    "prepush": "npm run test:unit",
     "speculate": "speculate",
     "start": "NODE_ENV=production node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
@@ -22,12 +24,6 @@
     "test:storybook": "(lsof -t -i:9001 | xargs kill) && run-p --race storybook cypress:storybook",
     "test:storybook:ci": "run-p --race storybook cypress:storybook",
     "test:unit": "razzle test --env=jsdom --coverage"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run test:lint",
-      "pre-push": "npm run test:unit"
-    }
   },
   "repository": {
     "type": "git",
