--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - npm run test$TEST_SUITE
 after_script:
-  - if [[$TEST_SUITE = '']]; ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT; fi
+  - if [[$TEST_SUITE = '']]; then ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT; fi
 
 notifications:
   email: false
