--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
 before_install: npm install -g npm@latest
 install: npm ci
 before_script:
-  - if [[$TEST_SUITE = '']]; then
+  - if [[$TEST_SUITE == '']]; then
       curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter;
       chmod +x ./cc-test-reporter;
       ./cc-test-reporter before-build;
@@ -18,7 +18,7 @@ before_script:
 script:
   - npm run test$TEST_SUITE
 after_script:
-  - if [[$TEST_SUITE = '']]; then ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT; fi
+  - if [[$TEST_SUITE == '']]; then ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT; fi
 
 notifications:
   email: false
