--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "npm run test:lint && npm run test:unit",
     "test:e2e": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start cypress",
-    "test:e2e:ci": "npm run build && run-p --race start cypress && run-p --race storybook cypress:storybook",
+    "test:e2e:ci": "npm run build && run-p --race start cypress",
     "test:e2e:interactive": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start cypress:interactive",
     "test:e2e:storybook": "(lsof -t -i:9001 | xargs kill) && run-p --race storybook cypress:storybook",
+    "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
     "test:lighthouse": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook",
     "test:unit": "razzle test --env=jsdom --coverage"
