Correct now config

--- a/now.json
+++ b/now.json
@@ -1,5 +1,5 @@
 {
-    "alias": "simorgh.storybook.now.sh",
-    "name": "simorgh.storybook",
+    "alias": "simorgh_storybook.now.sh",
+    "name": "simorgh_storybook",
     "public": true
 }
