--- a/now.storybook.json
+++ b/now.storybook.json
@@ -1,5 +1,5 @@
 {
-    "alias": "simorgh_storybook.now.sh",
-    "name": "simorgh_storybook",
+    "alias": "simorghstorybook.now.sh",
+    "name": "simorghstorybook",
     "public": true
 }
