Test rmvl of public in config

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,13 @@ jobs:
       script:
         - build-storybook -c .storybook -o .out
         - now rm -y --token $now_token --safe simorghstorybook
-        - now --token $now_token ./.out -A ../now.json && now alias --token $now_token simorghstorybook.now.sh
+        - now --token $now_token ./.out -A ../now.json --public && now alias --token $now_token simorghstorybook.now.sh
     - stage: test
       if: type = push
       before_script: npm install now --no-save
       script:
         - now rm -y --token $now_token --safe simorgh
-        - now --token $now_token && now alias --token $now_token simorgh.now.sh
+        - now --token $now_token --public && now alias --token $now_token simorgh.now.sh
 notifications:
   email: false
   slack:
