Simpler yaml for same effect

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,17 +25,8 @@ jobs:
       script:
         - build-storybook -c .storybook -o .out
         - now --token $now_token ./.out --public && now alias --token $now_token simorghstorybook.now.sh
-    - stage: deploy
-      if: type = push
-      before_script: npm install now --no-save
-      script:
         - now --token $now_token --public && now alias --token $now_token simorgh.now.sh
-    - stage: deploy_cleanup
-      if: type = push
-      before_script: npm install now --no-save
-      script: now rm -y --token $now_token --safe .out && now rm -y --token $now_token --safe simorgh
-  allow_failures:
-    - script: now rm -y --token $now_token --safe .out && now rm -y --token $now_token --safe simorgh
+        - now rm -y --token $now_token --safe .out && now rm -y --token $now_token --safe simorgh
 notifications:
   email: false
   slack:
