change killing and order of deploys

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,11 @@ jobs:
       if: type = push
       before_script: npm install now --no-save
       script:
+        - now --token $now_token --public && now alias --token $now_token simorgh.now.sh
+        - now rm -y --token $now_token --safe simorgh
         - build-storybook -c .storybook -o .out
         - now --token $now_token ./.out --public && now alias --token $now_token simorghstorybook.now.sh
-        - now --token $now_token --public && now alias --token $now_token simorgh.now.sh
-        - now rm -y --token $now_token --safe .out && now rm -y --token $now_token --safe simorgh
+        - now rm -y --token $now_token --safe .out
 notifications:
   email: false
   slack:
