Fixed the naming deploy bug

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,12 @@ jobs:
       if: type = push AND branch = latest
       before_script: npm install now --no-save
       script:
-        - build-storybook -c .storybook -o .out
-        - now --token $now_token ./.out --public && now alias --token $now_token
-        - now rm -y --token $now_token --safe .out
-      after_script: now rm -y --token $now_token --safe .out
+        - build-storybook -c .storybook -o simorghstorybook
+        - now --token $now_token ./simorghstorybook --public && now alias --token $now_token
+        - now rm -y --token $now_token --safe simorghstorybook
+      after_script: now rm -y --token $now_token --safe simorghstorybook
   allow_failures:
-    - after_script: now rm -y --token $now_token --safe .out
+    - after_script: now rm -y --token $now_token --safe simorghstorybook
 notifications:
   email: false
   slack:
