Swap remark for smaller lib

--- a/package.json
+++ b/package.json
@@ -47,14 +47,13 @@
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
+    "markdown-to-jsx": "^6.6.8",
     "prop-types": "^15.6.2",
     "razzle": "^2.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "remark": "^9.0.0",
-    "remark-react": "^4.0.3",
     "speculate": "^1.7.4",
     "styled-components": "^3.3.3"
   },
